# asafarim-dot-be

./: .gitignore  ASafariM.sln  AUTH_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  GITHUB_ACTIONS_INTEGRATION_PROMPT.md  GITHUB_ACTIONS_TESTING_GUIDE.md  GRAPH_PATHFINDING_MVP.md  LICENSE  PORT_CONFIGURATION.md  PRACTICE_REWARDS_MVP.md  README.md  RESTART_BACKEND.md  RESTART_INSTRUCTIONS.md  RESUME_IMPLEMENTATION_GUIDE.md  SMARTPATH_SETUP.md  TASK_MANAGEMENT_SETUP.md  WORKSPACE_CSS_SYNC.md  hosts.txt  package.json  pnpm-workspace.yaml  readme.md  restart-identity-api.ps1  test-api.js  test-auth-endpoints.sh  test-signout.sh  test-sso-v2.sh  test-user-creation.html  tsconfig.json
.windsurf/: context.md
continue.dev/: AGENT_INSTRUCTIONS.md
docs/: LOGOUT_FIX_SUMMARY.md  SSO-ARCHITECTURE.md  UX_IMPROVEMENTS_ERROR_HANDLING.md  (+3 more)
learn/hydrology-python/: .gitignore  README.md  best_params.json  event.csv  event_data.csv  event_detection.py  event_extraction.py  obs.csv  package.json  precip.csv  pyproject.toml  read_and_plot.py  report.md  requirements.txt  results.txt  sample_hydrograph.csv  sim.csv
learn/hydrology-python/hydrograph_lab/: __init__.py  calibration.py  cli.py  datasets.py  evaluation.py  events.py  io.py  metrics.py  models.py  models_ext.py  plotting.py  plotting_compare.py  plotting_pub.py  reporting.py  stats.py  test_basic.py
learn/hydrology-python/notebooks/: 01_basic_hydrograph.ipynb  02_model_vs_obs.ipynb  03_calibration.ipynb  04_reporting.ipynb  05_publication_plots.ipynb  06_models_and_datasets.ipynb
learn/hydrology-python/tests/: test_metrics.py
(+1910 files in other folders)
